argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: k8s.br0.no
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: argocd-httproute
  namespace: argocd
spec:
  hostnames:
  - k8s.br0.no
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: argocd-gateway
    namespace: argocd
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: argocd-server
      port: 80
    weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
